30-example/solution/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robot-test-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - tester'
spec:
  ingressClassName: nginx
  rules:
  - host: test-report.k8swrkshp.devopsplatforms.tv
    http:
      paths:
      - backend:
          service:
            name: robot-test-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test-report.k8swrkshp.devopsplatforms.tv
    secretName: test-report-cert-secret
